--- a/styles/components/_images.scss
+++ b/styles/components/_images.scss
@@ -2,6 +2,7 @@
 {
     aspect-ratio: 16/9;
     height: auto;
-    background-size: contain;
     width:100% !important;
+    object-fit: cover;
+    object-position: left;
 }
