--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
   <head>
-    <title>{% if page.title %}{{ page.title }} | {{ site.title }}{% else %} {{ site.title }}{% endif %}
+    <title>{% if page.name%}{{ page.name }} | {{ site.title }}{% else %} {{ site.title }}{% endif %}
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta charset="UTF-8" />
