--- a/_layouts/instrument-1.html
+++ b/_layouts/instrument-1.html
@@ -17,7 +17,7 @@
                 <div class="project-info">
                     <p class="project project-date">
                         <strong>Date </strong>
-                        <span>{{ page.construction.date.end | date: "%B, %y" }} </span>
+                        <span>{{ page.construction.date.end | date: "%B, %Y" }} </span>
                     </p>
                     <p class="project project-typology">
                         <strong>Type </strong>
