--- a/_layouts/instrument-1.html
+++ b/_layouts/instrument-1.html
@@ -23,9 +23,9 @@
                         <strong>Type </strong>
                         <span>{{ page.construction.typology }}</span>
                     </p>
-                    <p class="project project-role">
-                        <strong>Role </strong>
-                        <span>Building Designer</span>
+                    <p class="project project-status">
+                        <strong>Status </strong>
+                        <span>{{ page.status }}</span>
                     </p>
                 </div>
             </div>
