--- a/_layouts/instrument-2.html
+++ b/_layouts/instrument-2.html
@@ -4,7 +4,7 @@
 
 <body>
     <div class="container">
-        <div class="row gx-5 mx-lg-5">
+        <div class="row gx-4 mb-lg-4">
             {% include instrument_gallery_1.html %}
         </div>
         <div class="row">
