--- a/_layouts/instrument-1.html
+++ b/_layouts/instrument-1.html
@@ -3,8 +3,8 @@
 {% include head.html %}
 
 <body>
-    <div class="container">
-        <div class="row">
+    <div class="container px-lg-5">
+        <div class="row gx-5">
             <div class="col-12 col-md-6 mb-4">
                 {% include instrument_header.html %}
                 {% include instrument_category.html %}
