--- a/_layouts/instrument-2.html
+++ b/_layouts/instrument-2.html
@@ -3,11 +3,11 @@
 {% include head.html %}
 
 <body>
-    <div class="container">
-        <div class="row gx-4 mb-lg-4">
+    <div class="container px-lg-5">
+        <div class="row gx-5 mb-lg-4">
             {% include instrument_gallery_1.html %}
         </div>
-        <div class="row">
+        <div class="row gx-5">
             <div class="col-12 col-md-6 mb-4">
                 {% include instrument_header.html %}
                 {% include instrument_category.html %}
