--- a/_layouts/instrument-1.html
+++ b/_layouts/instrument-1.html
@@ -10,13 +10,13 @@
                 {% include instrument_category.html %}
                 {% include instrument_info.html %}
             </div>
-            <div class="col-12 col-md-6 mb-4">
+            <div class="col-12 col-md-4 mb-4">
                 <div class="content">
                     {{ content }}
                 </div>
             </div>
         </div>
-        <div class="row gx-5 mx-lg-5">
+        <div class="row gx-5">
             {% include instrument_gallery_1.html %}
         </div>
     </div>
