--- a/_layouts/instrument-3.html
+++ b/_layouts/instrument-3.html
@@ -12,7 +12,7 @@
                     </div>
                 {% endfor %}
             </div>
-            <div class="col">
+            <div class="col my-4">
                 {% include instrument_header.html %}
                 {% include instrument_category.html %}
                 <div class="content">
