--- a/_includes/instrument_header.html
+++ b/_includes/instrument_header.html
@@ -1,3 +1,3 @@
-<header class="project-heading">
+<header class="project-heading mb-5">
     <h1 class="text-uppercase">{{ page.name }}</h1>
 </header>
