--- a/_includes/instrument_gallery_1.html
+++ b/_includes/instrument_gallery_1.html
@@ -1,5 +1,5 @@
 {% for image in page.gallery %}
-    <div class="my-4 col-lg-6">
+    <a class="my-4 col-lg-6" href="{{ image }}" data-toggle=""lightbox" data-gallery="instrument_gallery">
         <img src="{{ image }}" class="img-fluid img-gallery" alt="image">
-    </div>
+    </a>
 {% endfor %}
