--- a/_includes/instrument_gallery_1.html
+++ b/_includes/instrument_gallery_1.html
@@ -3,3 +3,7 @@
         <img src="{{ image }}" class="img-fluid img-gallery" alt="image">
     </a>
 {% endfor %}
+
+<script>
+    import 'bs5-lightbox'
+</script>
