--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   
   
-  <title>{% if page.name%}{{ page.name }} | {{ site.title }}{% else %} {{ site.title }}{% endif %}</title>
+  <title>{% if page.name%}{{ page.name }} | {% endif %} {{ site.title }}</title>
   
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
   <meta charset="UTF-8" />
