--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,8 @@
               {{ site.title }}
             </div>
             <div class="credits text-secondary text-center text-md-start mt-2 fs-7">
-              {{ site. year }} | {{ site.title }} <br>
-              <small>{{ site.contact.email }}</small>
+                © {{ site. copyright }} | {{ site.web_address }} <br>
+              <small><a href="mailto:{{ site.contact.email }}">{{ site.contact.email }}</a></small>
             </div>
           </div>
   
