--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -8,13 +8,13 @@
             <div class="row gx-5">
                 <div class="col-md-6">
                         <div class="my-4">
-                            <img src="{{ instrument.headline }}" class="img-fluid img-gallery" alt="image">
+                            <img src="{{ instrument.images.header }}" class="img-fluid img-gallery" alt="image">
                         </div>
                 </div>
                 <div class="col-md-6 my-4">
                     <div class="content">
                         <h2 class="">{{ instrument.name }}</h2>
-                        <a href="{{ instrument.url }}" class="btn btn-outline-secondary stretched-link">Read</a>
+                        <a href="{{ instrument.url }}" class="btn btn-outline-secondary">Read</a>
                     </div>
                 </div>  
             </div>
